app_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-demo-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: istio-demo-app
  ports:
    - port: 80
      targetPort: 8080
      name: "http"
